[package]
name = "kv"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
futures = "0.3.31"
prost = "0.13.4"
rand = "0.8.5"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
tokio = { version = "1.42.0", features = ["full"] }
tonic = { version = "0.12.3", features = ["gzip"] }
ulid = { version = "1.1.4", features = ["serde"] }

[build-dependencies]
tonic-build = "0.12.3"
